objects/Location__c.object
<CustomObject>
    <description>The Location object supports the multiple addresses an Organization can have. The object combines information from an MDCP Site Business Relationship and its related Other Party Site Instance.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to an Account object&apos;s record of type Partner and Subtype Business Relationship. As per MDCP Data Model, this custom objects implements an intersection between a Site Business Relationship and its address and an Account record of type or Business Relationship.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Relationship__c</fullName>
        <description>Reference to an Account&apos;s Business Relationship value.</description>
        <formula>Account__r.MDCP_Business_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Address city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Address country.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS Site Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Out_of_business__c</fullName>
        <label>D&amp;B Out of business</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demerit_Count__c</fullName>
        <description>To store the demerit count</description>
        <label>Demerit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvaluateTerritory__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EvaluateTerritory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Lead_Status__c</fullName>
        <description>Picklist containing these values: Non compliant, Inactive, Active, Disqualified. Existing field carried over from Account object because of new partner data model. Tracks the reactivity of a partner at the location level in progressing through the life cycle of a Deal.</description>
        <label>HP Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Non Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_SFDC_Access__c</fullName>
        <description>Existing field carried over from Account object because of new partner data model. The field drives application logic related to Lead/Opportunity assignment to users of  portal-enabled partners&apos; Locations.</description>
        <label>HP SFDC Access</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <description>Location record&apos;s business activeness. Active/Inactive.</description>
        <label>Location Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locator_ID__c</fullName>
        <description>For Locator ID, use Location.Name!</description>
        <label>Locator ID (do not use)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Organization_ID__c</fullName>
        <formula>Account__r.MDCP_Organization_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDCP Organization ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Other_Party_Site_Instance_ID__c</fullName>
        <description>MDCP Other Party Site Instance ID for this Site Business Relationship with address.</description>
        <label>MDCP Site Instance ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_Of_Business__c</fullName>
        <label>Out Of Business</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Portal Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Address ZIP or Postal Code.</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to signal that this Location/OPSI is primary for its parent Business Relationship.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sell_Into_Market__c</fullName>
        <description>World/Region or Country market this Locations is supporting for sales.</description>
        <label>Sell Into Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>MDCP Business Relationship Item sequence number univocally identifying a Site Business Relationship.</description>
        <label>Sequence</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Account_ID__c</fullName>
        <description>External System ID. A Siebel PRM Partner ID.</description>
        <label>Source System Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Address state or province name.</description>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Address Line1 to Line 3 concatenated string.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Userkey__c</fullName>
        <description>Location record unique key.</description>
        <externalId>true</externalId>
        <label>Userkey</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WorldRegion_Hierarchy__c</fullName>
        <formula>World_Region1__r.Geographic_Hierarchy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldRegion_Region__c</fullName>
        <description>The field displays the &quot;Region&quot; value the Country defined in the address belongs to. The master field used for the evaluation of Region is Location.Country_Code__c, i.e., Lookup(World_Region_c).</description>
        <formula>World_Region1__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldRegion_SubRegion1__c</fullName>
        <formula>World_Region1__r.Sub_Region1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubRegion1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldRegion_SubRegion2__c</fullName>
        <formula>World_Region1__r.Sub_Region2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubRegion2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldRegion_SubRegion3__c</fullName>
        <formula>World_Region1__r.Sub_Region3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubRegion3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>World_Region1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>World Region</label>
        <referenceTo>World_Region__c</referenceTo>
        <relationshipLabel>Locations (World Region)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Business_Relationship__c</columns>
        <columns>Country__c</columns>
        <columns>City__c</columns>
        <columns>Street__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>State__c</columns>
        <columns>World_Region1__c</columns>
        <columns>Sell_Into_Market__c</columns>
        <columns>MDCP_Organization_ID__c</columns>
        <columns>Source_System_Account_ID__c</columns>
        <columns>DUNS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Locator ID</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IG0000001v6ZHMAY_00NZ0000000coGEMAY</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Channel_Partner__c.Location__c</field>
        <filterItems>
            <field>$Source.Channel_Partner__c</field>
            <operation>equals</operation>
            <valueField>Location__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Channel_Partner__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Alliance and Channel Partners_Location</name>
        <sourceObject>Channel_Partner__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IJ00000000ZojMAE_00NJ0000000g6ZQMAY</fullName>
        <active>true</active>
        <field>JBP__c.Location__c</field>
        <filterItems>
            <field>Location__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Joint Business Plan_External Profile Loc</name>
        <sourceObject>JBP__c</sourceObject>
    </namedFilters>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>